<resources>
    <string name="app_name">Hangman</string>
    <string name="app_developer">powered by Aybars and Tobias</string>
    <string name="user_entry">E-Mail</string>
    <string name="mail_adress">E-Mailadresse</string>
    <string name="password_entry">Passwort</string>
    <string name="repeat_password_entry">Passwort wiederholen</string>
    <string name="create_account">Registrieren</string>
    <string name="login">Anmelden</string>
    <string name="solo_player">Einzelspieler</string>
    <string name="multi_player">Mehrspieler</string>
    <string name="local_player">Lokales Spiel</string>
    <string name="settings">Einstellungen</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="activity_solo_game_imageview">HangmanImageView</string>
    <string name="local_game_challenge_text">Bitte gib das zu ratende Wort ein.</string>
    <string name="accept_button_title">Bestätigen</string>
    <string name="create_account_description">Noch kein Mitglied? Hier kannst du dich registrieren.</string>
    <string name="letter_a">a</string>
    <string name="letter_b">b</string>
    <string name="letter_c">c</string>
    <string name="letter_d">d</string>
    <string name="letter_e">e</string>
    <string name="letter_f">f</string>
    <string name="letter_g">g</string>
    <string name="letter_h">h</string>
    <string name="letter_i">i</string>
    <string name="letter_j">j</string>
    <string name="letter_k">k</string>
    <string name="letter_l">l</string>
    <string name="letter_m">m</string>
    <string name="letter_n">n</string>
    <string name="letter_o">o</string>
    <string name="letter_p">p</string>
    <string name="letter_q">q</string>
    <string name="letter_r">r</string>
    <string name="letter_s">s</string>
    <string name="letter_t">t</string>
    <string name="letter_u">u</string>
    <string name="letter_v">v</string>
    <string name="letter_w">w</string>
    <string name="letter_x">x</string>
    <string name="letter_y">y</string>
    <string name="letter_z">z</string>
    <string name="letter_ä">ä</string>
    <string name="letter_ö">ö</string>
    <string name="letter_ü">ü</string>
    <string name="a">A</string>
    <string name="title_activity_create_account">Sign in</string>
    <string name="logout">Ausloggen</string>
    <string name="open">Öffnen</string>
    <string name="close">Schließen</string>
    <string name="gamemode">Spielmodis</string>
    <string name="credits">Credits</string>
    <string name="newMail">E-Mailadresse ändern</string>
    <string name="newPassword">Passwort ändern</string>
    <string name="deleteUser">Account löschen</string>
    <string name="change">Ändern</string>
    <string name="ok">Ok</string>
    <string name="cancel">Abbrechen</string>
    <string name="pleaselogin">Bitte anmelden</string>
    <string name="credit">Android Hive</string>
    <string name="credit2">Google-Firebase</string>
    <string name="credit3">shareicon.net</string>
    <string name="credit4">flaticon.net</string>
    <string name="username">Benutzername</string>
    <string name="profilepic">Profilebild</string>
    <string name="example">z.B. Haus, Intel, AMD</string>
    <string name="defaultvalue">TextView</string>
    <string name="passwordreset">Passwort zurücksetzten</string>
    <string name="enterMail">Bitte geben sie ihrer E-Mailadresse ein</string>



    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
